# page-parser

./: README.md  pyproject.toml  requirements.txt  setup.py  test.json
page_parser/: __init__.py  abstractions.py  options.py  parser.py
page_parser/marketplace_search/: rihappy.py
page_parser/marketplace_sku/: amazon.py  amazon_pt.py  mercado_livre.py  mercado_livre_api.py  rihappy.py
page_parser/marketplaces/: amazon.py  amazon_pt.py  mercado_livre.py  rihappy.py
page_parser/options/: options.py  search_options.py  sku_options.py
tests/: test_amazon.py  test_amazon_pt.py  test_mercado_livre.py  test_mercado_livre_api.py  test_rihappy.py
tests/amazon/: 8565042472.html  B07DQB7QKD.html  B08ZK6N3XZ.html  B09YRKYRSM.html
tests/amazon_pt/: B08PBWPQ16.html  B09PRB88ZK.html
tests/americanas/: 133081220.html
tests/mercado_livre/MLB1197244979/: 01.json  03.json  04.json
tests/res/amazon/: B076QFXQK5.html  B09B2SRTB3.html
tests/res/amazon_pt/: B07ZCVN7YN.html  B08W263X51.html
tests/res/mercado_livre_api/MLB1197244979/: 02.json  05.json
tests/rihappy/: dino-papa-tudo-elka.html
