[project]
name = "page-parser"
version = "0.1.0"
description = "Collect the page information"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
keywords = [
    "parse",
    "html",
    "css"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "Babel>=2.10.3",
    "la-catch>=0.0.5",
    "la-deep-get>=0.0.3",
    "parsel>=1.6.0",
    "pyjson5>=1.6.1",
    "structlog>=22.1.0",
    "page-models @ git+https://github.com/la-catalog/page-models.git",
    "url-parser @ git+https://github.com/la-catalog/url-parser.git",
]

[project.urls]
repository = "https://github.com/thiagola92/page-parser"

[tool.pdm]

[tool.pdm.scripts]
tests = "python -m unittest discover -v -f -s tests"
sort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "isort"
]

# [[tool.pdm.source]]
# url = "https://private-site.org/pypi/simple"
# verify_ssl = false
# name = "lacatalog"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
