[project]
name = "page-parser"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "Babel==2.10.3",
    "la-catch==0.0.6",
    "la-deep-get==0.0.6",
    "parsel==1.6.0",
    "pyjson5==1.6.2",
    "structlog==22.1.0",
    "url-parser @ git+https://github.com/la-catalog/url-parser.git",
    "page-models @ git+https://github.com/la-catalog/page-models.git",
    "url-builder @ git+https://github.com/la-catalog/url-builder.git",
]

[project.urls]
repository = "https://github.com/la-catalog/page-parser"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
black = "python -m black ."
isort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black==22.8.0",
    "isort==5.10.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

# [[tool.pdm.source]]
# url = "https://private-site.org/pypi/simple"
# verify_ssl = false
# name = "lacatalog"